<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditText
        android:id="@+id/edtAmountIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginVertical="10dp"
        android:hint="@string/edtAmountI"
        android:inputType="numberDecimal"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/edtDescriptionIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:inputType="textMultiLine"
        android:layout_marginVertical="10dp"
        android:hint="@string/edtDescritionI" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:text="@string/msgRGI"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb1I"
            android:layout_width="match_parent"
            android:text="@string/rb1I"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:checked="true"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb2I"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2I"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"/>
        <RadioButton
            android:id="@+id/rb3I"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3I"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"/>
        <RadioButton
            android:id="@+id/rb4I"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4I"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnAddIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:paddingStart="25dp"/>
</LinearLayout>