<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:src="@drawable/dollar"
        android:layout_marginBottom="10dp"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:text="@string/tvAppName"/>
    <EditText
        android:id="@+id/edtEmailF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edtEmail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        />
    <Button
        android:id="@+id/btnForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/turquiese"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingStart="25dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:text="@string/btnForgot"
        android:textAlignment="center"/>


</LinearLayout>