<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:text="@string/msgIng"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/viewIncome"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:text="@string/msgGa"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/viewBill"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:text="@string/msgGene"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/viewBalance"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>